--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -158,5 +158,9 @@ if(customizer)
     // customizer js
     script(src="../../assets/js/customizer.js") 
 
+if(darkLayout)
+    // darkLayout js
+    script(src="../../assets/js/dark-layout.js") 
+
 // Custom script   
 script(src='../../assets/js/script.js')   
