--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1482,7 +1482,7 @@
                   <div class="flex flex-col gap-1"> 
                     <label class="font-bold text-xs text-primary" for="coupon-code">Apply Coupon Code</label>
                     <div class="flex items-center justify-center"> 
-                      <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rounded-tl-5">Apply</span>
+                      <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">Apply</span>
                     </div>
                   </div>
                   <div class="divider w-full my-3"> </div>
