--- a/html/template/checkout.html
+++ b/html/template/checkout.html
@@ -1127,7 +1127,7 @@
         <!-- Page Body Start-->
         <div class="page-body"> 
           <div class="grid grid-cols-12 gap-4 card checkout-detail"> 
-            <div class="col-span-8 flex flex-col w-full pr-4 border-r lg:col-span-12 tabs lg:border-b lg:border-l-0 rtl:lg:border-r-0 lg:pb-4 rtl:lg:border-l-0 lg:px-0 lg:pr-0 rtl:lg:pl-0 border-border-light rtl:border-l rtl:border-r-0 rtl:pl-4 rtl:pr-unset">
+            <div class="col-span-8 flex flex-col w-full pr-4 border-r lg:col-span-12 tabs lg:border-b lg:border-l-0 lg:border-r-0 lg:pb-4 rtl:lg:border-l-0 lg:px-0 lg:pr-0 rtl:lg:pl-0 border-border-light rtl:border-l rtl:border-r-0 rtl:pl-4 rtl:pr-unset">
               <div class="mb-1 tab-links flex items-center 2md:flex-col">
                 <button class="tab product-tab w-full items-center text-sm tab-active tab-link" data-tabFilter="1"> <i class="fa-solid fa-user"></i>Billing  </button>
                 <button class="tab product-tab w-full items-center text-sm tab-link" data-tabFilter="2"><i class="fa-solid fa-truck-fast"></i>Shipping</button>
@@ -1304,7 +1304,7 @@
                     <h5 class="text-title font-semibold mb-2">Payment Information </h5>
                     <p class="text-content3 mb-5">Fill up the following information to send you the order</p>
                     <div class="border border-border-light p-4 mb-5"> 
-                      <div class="flex gap-2 items-center justify-between">
+                      <div class="flex gap-2 items-center justify-between 2sm:flex-col 2sm:items-start">
                         <div>
                           <div class="flex items-center gap-2 mb-1">
                             <div class="radio-button radio-sm primary">
@@ -1314,11 +1314,11 @@
                             </div>
                           </div>
                           <p class="pl-6 text-content3 text-xs">You will be taken to the PayPal website to finish your transaction safely</p>
-                        </div><img class="h-[30px]" src="../../assets/images/ecommerce/paypal.png" alt="PayPal">
+                        </div><img class="h-[30px] 2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6" src="../../assets/images/ecommerce/paypal.png" alt="PayPal">
                       </div>
                     </div>
                     <div class="border border-border-light p-4 mb-5"> 
-                      <div class="flex gap-2 items-center justify-between mb-5">
+                      <div class="flex gap-2 items-center justify-between mb-5 2sm:flex-col 2sm:items-start">
                         <div>
                           <div class="flex items-center gap-2 mb-1">
                             <div class="radio-button radio-sm primary">
@@ -1328,7 +1328,7 @@
                             </div>
                           </div>
                           <p class="pl-6 text-content3 text-xs">Transferring money securely through your bank account. Mastercard, Visa, Discover, and Stripe are all accepted</p>
-                        </div><img class="h-[30px]" src="../../assets/images/ecommerce/credit-card.png" alt="credit card">
+                        </div><img class="h-[30px] 2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6" src="../../assets/images/ecommerce/credit-card.png" alt="credit card">
                       </div>
                       <form class="flex flex-col gap-4 m-0 theme-form" action="index.html">
                         <div>
@@ -1352,7 +1352,7 @@
                       </form>
                     </div>
                     <div class="border border-border-light p-4 mb-5"> 
-                      <div class="flex gap-2 items-center justify-between">
+                      <div class="flex gap-2 items-center justify-between 2sm:flex-col 2sm:items-start">
                         <div>
                           <div class="flex items-center gap-2 mb-1">
                             <div class="radio-button radio-sm primary">
@@ -1362,7 +1362,7 @@
                             </div>
                           </div>
                           <p class="pl-6 text-content3 text-xs">After your order is delivered, make a cash payment</p>
-                        </div><img class="h-[30px]" src="../../assets/images/ecommerce/cash-on-delivery.png" alt="cash on delivery">
+                        </div><img class="h-[30px] 2sm:pl-6 rtl:2sm:pl-unset rtl:2sm:pr-6" src="../../assets/images/ecommerce/cash-on-delivery.png" alt="cash on delivery">
                       </div>
                     </div>
                     <div class="flex justify-between items-center sm:flex-col sm:gap-3"><a class="btn bg-secondary text-xs text-white flex items-center gap-2 py-2 !w-fit sm:!w-full justify-center !m-0" href="cart.html" type="button"> <i class="w-4 h-4 stroke-white" data-feather="arrow-left"></i> Return to Shopping Cart</a><a class="btn btn-primary text-xs text-white flex items-center gap-2 py-2 !w-fit sm:!w-full justify-center !m-0" href="javascript:void(0)" type="button">
