--- a/html/template/dark-layout.html
+++ b/html/template/dark-layout.html
@@ -1241,6 +1241,8 @@
   <script src="../../assets/js/sidebar.js"></script>
   <!-- customizer js-->
   <script src="../../assets/js/customizer.js"> </script>
+  <!-- darkLayout js-->
+  <script src="../../assets/js/dark-layout.js"> </script>
   <!-- Custom script   -->
   <script src="../../assets/js/script.js">  </script>
 </html>
