--- a/html/template/invoice-preview.html
+++ b/html/template/invoice-preview.html
@@ -1126,7 +1126,7 @@
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap">
             <div class="col-span-12">
-              <div class="card m-auto max-w-5xl invoice-preview overflow-auto custom-scroll"> 
+              <div class="card max-w-5xl m-auto overflow-auto invoice-preview custom-scroll"> 
                 <table class="table equal-space">
                   <tbody>  
                     <tr>                              
@@ -1256,8 +1256,8 @@
                       </td>
                     </tr>
                     <tr> 
-                      <td class="!text-left" colspan="2">
-                        <p class="text-title text-xs font-bold uppercase !mb-0">Payment Detail</p>
+                      <td class="!text-left rtl:!text-right" colspan="2">
+                        <p class="text-title text-xs font-bold uppercase">Payment Detail</p>
                         <p class="text-title text-xs font-semibold">Payment Method: <span class="font-medium text-content3">Mastercard</span></p>
                         <p class="text-title text-xs font-semibold">Card Holder: <span class="font-medium text-content3">	Vilma Gerhold</span></p>
                         <p class="text-title text-xs font-semibold">Card Number: <span class="font-medium text-content3">xxx xxxx xxxx 7159       </span></p>
@@ -1265,7 +1265,7 @@
                       </td>
                     </tr>
                     <tr> 
-                      <td class="!text-left" colspan="2">
+                      <td class="!text-left rtl:!text-right" colspan="2">
                         <p class="text-title text-xs font-bold uppercase">Notes </p>
                         <p class="font-medium text-content3">All accounts must be settled within seven days of receiving an invoice. to be paid by check, credit card, or online direct deposit. If the account is not paid within seven days, the agreed-upon quoted fee indicated above will be charged to the credits details provided as confirmation of the task completed.</p>
                       </td>
