--- a/html/template/invoice.html
+++ b/html/template/invoice.html
@@ -1146,8 +1146,8 @@
                       </div>
                     </div>
                     <div class="flex items-center m-0">
-                      <input class="py-[11px] px-[25px] border rounded w-full text-xs text-Gray-darker rounded-tr-none rounded-br-none" type="Search" placeholder="Search">
-                      <button class="bg-primary text-white rounded border-none p-3 rounded-tl-none rounded-bl-none">
+                      <input class="py-[11px] px-[25px] border rounded w-full text-xs text-Gray-darker rounded-tr-none rounded-br-none rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none" type="Search" placeholder="Search">
+                      <button class="bg-primary text-white rounded border-none p-3 rounded-tl-none rounded-bl-none rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">
                         <svg class="w-[20px] h-[20px] stroke-white"> 
                           <use href="../../assets/svg/_sprite.svg#Search"> </use>
                         </svg>
