--- a/assets/pug/pages/template/cart.pug
+++ b/assets/pug/pages/template/cart.pug
@@ -49,7 +49,7 @@ html(lang='en')
                               label(for="coupon-code").font-bold.text-xs.text-primary Apply Coupon Code
                               div.flex.items-center.justify-center 
                                  input(type="text" placeholder="Enter code" class="p-[11px]" id="coupon-code").w-full.rounded-br-none.rounded-tr-none.border.border-border-light.rounded-5.text-xs.text-content(class="rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none")
-                                 span.flex.items-center.justify-center.bg-primary.text-white.rounded-5.border-none.rounded-bl-none.rounded-tl-none.font-medium.text-xs(class="py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rounded-tl-5") Apply
+                                 span.flex.items-center.justify-center.bg-primary.text-white.rounded-5.border-none.rounded-bl-none.rounded-tl-none.font-medium.text-xs(class="py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5") Apply
                            div.divider.w-full.my-3 
                            ul.flex.flex-col.gap-2 
                               li.flex.items-center.justify-between.text-content.font-bold
