--- a/assets/postcss/components/_table.css
+++ b/assets/postcss/components/_table.css
@@ -5,7 +5,7 @@
   .table {
     @apply w-full text-left;
     thead {
-      @apply border-b border-border-light;
+      @apply border-b border-border-light dark:border-border-dark;
       tr {
         th {
           @apply py-[.6875rem] px-[.3438rem] pt-0 first:pl-0 last:pr-0 text-xs font-semibold capitalize text-content3 rtl:text-right;
@@ -14,7 +14,7 @@
     }
     tbody {
       tr {
-        @apply border-b border-border-light last:border-none;
+        @apply border-b border-border-light dark:border-border-dark last:border-none;
         td {
           @apply 4xl:py-[.9375rem] py-[1.125rem] px-[.3438rem] first:pl-0 last:pr-0 text-xs font-semibold rtl:text-right;
         }
