--- a/assets/pug/layout/header/cart.pug
+++ b/assets/pug/layout/header/cart.pug
@@ -1,9 +1,9 @@
 
 // Cart Start 
 div.dropdown.shopping-bag 
-   +SVG_ICON("Buy","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title")
+   +SVG_ICON("Buy","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
    div.dropdown-menu(class="!min-w-[320px]")
-      div.flex.items-center.justify-between(class="pb-[15px] border-b border-border-light") 
+      div.flex.items-center.justify-between(class="pb-[15px] border-b border-border-light dark:border-border-dark") 
          h4(class="text-base font-bold text-title")
             | Cart Items
             span(class="text-sm font-bold text-content")  (25)
@@ -12,7 +12,7 @@ div.dropdown.shopping-bag
 
       ul(class="flex flex-col max-h-[232px] overflow-auto custom-scroll px-1") 
          each cartItems in ADD_TO_CART_ITEMS
-            li.cart-item.flex.items-center.gap-3(class="py-3 transition-all duration-300 border-b last:border-b-0 border-border-light rounded-5")
+            li.cart-item.flex.items-center.gap-3(class="py-3 transition-all duration-300 border-b last:border-b-0 border-border-light dark:border-border-dark rounded-5")
                a.flex.items-center(href="./product.html" class="gap-[12px]")
                   div.rounded-full(class="relative ")
                      img(class="rounded-full min-w-[2.25rem] min-h-[2.25rem] w-full h-auto object-cover" src=`../../assets/images/product/${cartItems.image}` alt=`${cartItems.name}`) 
@@ -25,6 +25,6 @@ div.dropdown.shopping-bag
       div(class="pt-[15px] border-t border-light")
          div.flex.items-center.justify-between(class="mb-[15px]")
             h4(class="text-sm font-semibold") Bag Total
-            span(class="text-base font-semibold") $250.00 
-         a(href="checkout.html" class="w-full text-sm font-semibold text-white btn btn-primary") Proceed to Checkout 
+            span(class="text-sm font-semibold") $250.00 
+         a(href="checkout.html" class="block w-full py-2 text-sm font-semibold leading-none text-white btn btn-primary") Proceed to Checkout 
 // Cart Start 
