--- a/assets/pug/layout/header/profile-box.pug
+++ b/assets/pug/layout/header/profile-box.pug
@@ -5,15 +5,15 @@ div.dropdown
       div
          img(class="w-[calc(35px_+_(40_-_35)_*_((100vw_-_320px)_/_(1920_-_320)))] h-auto rounded-full" src="../../assets/images/avatar/1.jpg" alt="avatar")
       div(class="md:hidden")
-         h4(class="text-xs font-bold")  Helen Walter
-         span.flex.items-center.gap-1(class="text-3xs font-semibold text-content")
+         h4(class="text-xs font-bold dark:text-white")  Helen Walter
+         span.flex.items-center.gap-1(class="font-semibold text-3xs text-content")
             | Admin
-            +SVG_ICON( "Fill-Arrow","w-[6px] h-[4px]")
+            +SVG_ICON( "Fill-Arrow","w-[6px] h-[4px]  dark:stroke-white")
    div.dropdown-menu(class="!min-w-[170px]") 
       ul.flex.flex-col.gap-3 
          each setting in PROFILE_SETTING
             li 
-               a(href=`${setting.url}` class="text-title flex items-center gap-2")
-                  +SVG_ICON(`${setting.icon}`,"w-[22px] h-[22px] stroke-title")
+               a(href=`${setting.url}` class="flex items-center gap-2 text-title")
+                  +SVG_ICON(`${setting.icon}`,"w-[22px] h-[22px] stroke-title dark:stroke-white")
                   = setting.name
 // Profile End 
