--- a/assets/pug/layout/header/sub-header.pug
+++ b/assets/pug/layout/header/sub-header.pug
@@ -1,5 +1,5 @@
 // Sub Header Start 
-div(class="md:hidden py-[14px] border-t border-border-light px-body-space") 
+div(class="md:hidden py-[14px] border-t border-border-light px-body-space dark:border-border-dark") 
    div.relative.flex.items-center.justify-between 
       ul.flex.items-center(class="2md:shadow-lg 2md:border 2md:border-border-light 2md:z-[5] 2md:p-4 2md:absolute 2md:top-[38px] 2md:rounded-5 2md:left-0 2md:items-start 2md:bg-white 2md:flex-col gap-[calc(8px_+_(31_-_8)_*_((100vw_-_320px)_/_(1920_-_320)))]") 
          li(class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 before:w-full before:h-[2px]") 
